[REFACTOR] Remove unused import, SonarLint critical or major issues